Add Interact View

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -59,13 +59,16 @@
      <Compile Include="Assets\Script\Kernal\MonoEntity.cs" />
      <Compile Include="Assets\Script\Kernal\MonoGameKernal.cs" />
      <Compile Include="Assets\Script\Kernal\MonoTimer.cs" />
+     <Compile Include="Assets\Script\Kernal\MonoView.cs" />
      <Compile Include="Assets\Script\Kernal\Player.cs" />
      <Compile Include="Assets\Script\Kernal\Stage.cs" />
      <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractView.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameState.cs" />
      <Compile Include="Assets\Script\MainGame\MonoGameInput.cs" />
      <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
      <Compile Include="Assets\Script\TestBehavior.cs" />
+     <Compile Include="Assets\Script\UI\MonoSizeCopy.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity55/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
