Add view open anim component

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -55,6 +55,7 @@
      <Compile Include="Assets\Script\Kernal\GameKernal.cs" />
      <Compile Include="Assets\Script\Kernal\InteractSystem.cs" />
      <Compile Include="Assets\Script\Kernal\KernalInterfaceDefine.cs" />
+     <Compile Include="Assets\Script\Kernal\MonoAnimation.cs" />
      <Compile Include="Assets\Script\Kernal\MonoCamera.cs" />
      <Compile Include="Assets\Script\Kernal\MonoEntity.cs" />
      <Compile Include="Assets\Script\Kernal\MonoGameKernal.cs" />
