Changed the implementation of the interact command mechanism

--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Assets\Script\Kernal\KernalInterfaceDefine.cs" />
     <Compile Include="Assets\Script\Kernal\MonoAnimation.cs" />
     <Compile Include="Assets\Script\Kernal\MonoCamera.cs" />
+    <Compile Include="Assets\Script\Kernal\MonoDelegate.cs" />
     <Compile Include="Assets\Script\Kernal\MonoEntity.cs" />
     <Compile Include="Assets\Script\Kernal\MonoGameKernal.cs" />
     <Compile Include="Assets\Script\Kernal\MonoPlayerConfig.cs" />
