Add prop object feature

--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\Script\Kernal\BaseGameCamera.cs" />
     <Compile Include="Assets\Script\Kernal\BaseGameKernal.cs" />
     <Compile Include="Assets\Script\Kernal\BasePlayer.cs" />
+    <Compile Include="Assets\Script\Kernal\BasePropObject.cs" />
     <Compile Include="Assets\Script\Kernal\BaseStage.cs" />
     <Compile Include="Assets\Script\Kernal\Factories.cs" />
     <Compile Include="Assets\Script\Kernal\GameCamera.cs" />
@@ -96,6 +97,7 @@
     <Compile Include="Assets\Script\Kernal\MonoTimer.cs" />
     <Compile Include="Assets\Script\Kernal\MonoView.cs" />
     <Compile Include="Assets\Script\Kernal\Player.cs" />
+    <Compile Include="Assets\Script\Kernal\PropObject.cs" />
     <Compile Include="Assets\Script\Kernal\Stage.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
     <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
