--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -109,8 +109,10 @@
     <Compile Include="Assets\Script\MainGame\MonoSelectPanel.cs" />
     <Compile Include="Assets\Script\MainGame\NonPlayerManager.cs" />
     <Compile Include="Assets\Script\MainGame\PlayerStageManager.cs" />
+    <Compile Include="Assets\Script\MainGame\PropObjectManager.cs" />
     <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
     <Compile Include="Assets\Script\Test\TestNonPlayerDatabase.cs" />
+    <Compile Include="Assets\Script\Test\TestPropObjectDatabase.cs" />
     <Compile Include="Assets\Script\Test\TestStageDatabase.cs" />
     <Compile Include="Assets\Script\TestBehavior.cs" />
     <Compile Include="Assets\Script\UI\MonoSizeCopy.cs" />
