--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -104,7 +104,11 @@
     <Compile Include="Assets\Script\Kernal\Stage.cs" />
     <Compile Include="Assets\Script\Kernal\Trigger.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\TestCommonEvent.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandDialog.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandMessage.cs" />
     <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
     <Compile Include="Assets\Script\MainGame\InteractView.cs" />
     <Compile Include="Assets\Script\MainGame\MainGameCommandBuilder.cs" />
