Complete the refactoring

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,9 +75,12 @@
      <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandAnimation.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandDialog.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandMessage.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandNonPlayerFace.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandSelect.cs" />
+     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandWait.cs" />
      <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
      <Compile Include="Assets\Script\MainGame\InteractView.cs" />
      <Compile Include="Assets\Script\MainGame\MainGameCommandBuilder.cs" />
