--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -103,12 +103,18 @@
     <Compile Include="Assets\Script\Kernal\PropObject.cs" />
     <Compile Include="Assets\Script\Kernal\Stage.cs" />
     <Compile Include="Assets\Script\Kernal\Trigger.cs" />
-    <Compile Include="Assets\Script\MainGame\CommonEvents\TestCommonEvent.cs" />
+    <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetDialog.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandAnimation.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandCommonEvent.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandDialog.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandGroup.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandMessage.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandNonPlayerFace.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandSelect.cs" />
+    <Compile Include="Assets\Script\MainGame\InteractCommands\InteractCommandWait.cs" />
     <Compile Include="Assets\Script\MainGame\InteractGameState.cs" />
     <Compile Include="Assets\Script\MainGame\InteractView.cs" />
     <Compile Include="Assets\Script\MainGame\MainGameCommandBuilder.cs" />
@@ -122,6 +128,7 @@
     <Compile Include="Assets\Script\MainGame\TriggerManager.cs" />
     <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
     <Compile Include="Assets\Script\Test\TestCommonEventDatabase.cs" />
+    <Compile Include="Assets\Script\Test\TestInteractCommandDatabase.cs" />
     <Compile Include="Assets\Script\Test\TestNonPlayerDatabase.cs" />
     <Compile Include="Assets\Script\Test\TestPropObjectDatabase.cs" />
     <Compile Include="Assets\Script\Test\TestStageDatabase.cs" />
