--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -145,6 +145,15 @@
     <Compile Include="Assets\Script\UI\MonoTypewriter.cs" />
     <Compile Include="Assets\Script\UI\MonoViewOpenAnim.cs" />
     <Compile Include="Assets\Script\UI\UIUtils.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\IJsonWrapper.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonData.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonException.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonMapper.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonMockWrapper.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonReader.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\JsonWriter.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\Lexer.cs" />
+    <Compile Include="Assets\ThirdParty\LitJson\ParserToken.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
