--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -105,6 +105,7 @@
      <Compile Include="Assets\Script\Test\MonoGameKernalTest.cs" />
      <Compile Include="Assets\Script\Test\TestCommonEventDatabase.cs" />
      <Compile Include="Assets\Script\Test\TestInteractCommandDatabase.cs" />
+     <Compile Include="Assets\Script\Test\TestJson.cs" />
      <Compile Include="Assets\Script\Test\TestNonPlayerDatabase.cs" />
      <Compile Include="Assets\Script\Test\TestPropObjectDatabase.cs" />
      <Compile Include="Assets\Script\Test\TestStageDatabase.cs" />
@@ -113,6 +114,16 @@
      <Compile Include="Assets\Script\UI\MonoTypewriter.cs" />
      <Compile Include="Assets\Script\UI\MonoViewOpenAnim.cs" />
      <Compile Include="Assets\Script\UI\UIUtils.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\IJsonWrapper.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonData.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonException.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonMapper.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonMockWrapper.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonReader.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\JsonWriter.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\Lexer.cs" />
+     <Compile Include="Assets\ThirdParty\LitJson\ParserToken.cs" />
+     <None Include="Assets\Resources\CommonEvent\TestCommonEvent.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>E:/Unity55/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
