--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\Database\CommonEventDatabase.cs" />
     <Compile Include="Assets\Script\Helper\JsonHelper.cs" />
     <Compile Include="Assets\Script\Helper\MathHelper.cs" />
     <Compile Include="Assets\Script\Kernal\BaseGameCamera.cs" />
@@ -158,6 +159,7 @@
     <Compile Include="Assets\ThirdParty\LitJson\ParserToken.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Resources\CommonEvent\CommonEvent.txt" />
     <None Include="Assets\Resources\CommonEvent\TestCommonEvent.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
