--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -79,6 +79,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Script\Database\CommonEventDatabase.cs" />
+    <Compile Include="Assets\Script\Database\InteractCommandDatabase.cs" />
     <Compile Include="Assets\Script\Helper\JsonHelper.cs" />
     <Compile Include="Assets\Script\Helper\MathHelper.cs" />
     <Compile Include="Assets\Script\Kernal\BaseGameCamera.cs" />
@@ -160,6 +161,7 @@
   <ItemGroup>
     <None Include="Assets\Resources\CommonEvent\CommonEvent.txt" />
     <None Include="Assets\Resources\CommonEvent\TestCommonEvent.txt" />
+    <None Include="Assets\Resources\InteractCommand\InteractCommand.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
