--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -106,13 +106,14 @@
     <Compile Include="Assets\Script\Kernal\PropObject.cs" />
     <Compile Include="Assets\Script\Kernal\Stage.cs" />
     <Compile Include="Assets\Script\Kernal\Trigger.cs" />
+    <Compile Include="Assets\Script\MainGame\CommonEval\CommonIntegerFromValue.cs" />
+    <Compile Include="Assets\Script\MainGame\CommonEval\CommonIntegerLiteral.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventGroup.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetDialog.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPredicate.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
     <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
-    <Compile Include="Assets\Script\MainGame\CommonEvents\CommonIntegerFromValue.cs" />
-    <Compile Include="Assets\Script\MainGame\CommonEvents\CommonIntegerLiteral.cs" />
+    <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
     <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
@@ -144,6 +145,7 @@
     <Compile Include="Assets\Script\Test\TestPropObjectDatabase.cs" />
     <Compile Include="Assets\Script\Test\TestStageDatabase.cs" />
     <Compile Include="Assets\Script\TestBehavior.cs" />
+    <Compile Include="Assets\Script\TextMap\TextMap.cs" />
     <Compile Include="Assets\Script\UI\MonoSizeCopy.cs" />
     <Compile Include="Assets\Script\UI\MonoTypewriter.cs" />
     <Compile Include="Assets\Script\UI\MonoViewOpenAnim.cs" />
