--- a/TestUnity.csproj
+++ b/TestUnity.csproj
@@ -165,6 +165,7 @@
     <None Include="Assets\Resources\CommonEvent\CommonEvent.txt" />
     <None Include="Assets\Resources\CommonEvent\TestCommonEvent.txt" />
     <None Include="Assets\Resources\InteractCommand\InteractCommand.txt" />
+    <None Include="Assets\Resources\TextMap\TextMap.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
