--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -80,12 +80,18 @@
      <Compile Include="Assets\Script\MainGame\CommonEval\CommonIntegerFromValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEval\CommonIntegerLiteral.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEval\CommonStringLiteral.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEval\CommonVector3Literal.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEval\CommonVector3Multiply.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEval\CommonVector3Player.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEval\CommonVector3Plus.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonEval\CommonVector3StagePoint.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventGroup.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventNonPlayerSetDialog.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventPredicate.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetIntValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonEvents\CommonEventSetStringValue.cs" />
      <Compile Include="Assets\Script\MainGame\CommonIntegerAndString.cs" />
+     <Compile Include="Assets\Script\MainGame\CommonVector3Builder.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommandBuilder.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommandManager.cs" />
      <Compile Include="Assets\Script\MainGame\InteractCommands.cs" />
